Tue Feb 19 03:02:58 GMT 2013  Olly Betts <olly@survex.com>

	* gen-myhtmltags,htmlparsetest.cc,myhtmlparse.cc,myhtmlparse.tokens:
	  Generate a lookup table for where we should insert a space in place
	  of an HTML tag rather than using a switch statement for that.

Tue Feb 12 20:43:14 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am: Remove my-html-tok.h in "make clean" not "make
	  distclean", since it's built by "make" and that's what the automake
	  manual recommends for files built by "make".

Tue Feb 12 20:41:53 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am: Clean up my-html-tok.h in "make distclean".

Tue Feb 12 20:03:51 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am: Ship common/keyword.h.

Tue Feb 12 19:27:26 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am: Ship common/Tokeniseise.pm.

Tue Feb 12 00:44:23 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am: Fix to work in VPATH build.

Mon Feb 11 22:38:16 GMT 2013  Olly Betts <olly@survex.com>

	* xlsxparse.cc: Correct "max" -> "min" when reserving space for shared
	  strings.  This only means we now reserve a more appropriate amount
	  of space to start with.

Fri Feb 01 04:11:50 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am: Ship new file myhtmlparse.tokens.

Thu Jan 31 23:42:23 GMT 2013  Olly Betts <olly@survex.com>

	* myhtmlparse.cc,myhtmlparse.tokens: Add <APPLET>, <OBJECT>, and
	  <TR> to the tags handled.

Thu Jan 31 06:24:13 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am,gen-myhtmltags,myhtmlparse.cc,myhtmlparse.tokens: Use
	  a generated compact and efficient table to convert HTML tag names
	  to enum codes, which we can then use a C switch statement to
	  dispatch.  The table first checks the token length, and then does a
	  binary chop on tokens of the same length.  This is both faster and
	  smaller than the approach we were using, with the benefit that the
	  table is auto-generated.

Thu Jan 31 06:21:22 GMT 2013  Olly Betts <olly@survex.com>
